--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,642 @@
-.App {
+nav {
+  width: 100vh !important;
+  height: 65px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 9999;
+  transform: rotate(90deg);
+  transform-origin: top right;
+}
+nav > div {
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+nav > div ul {
+  width: fit-content;
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: repeat(5, auto);
+}
+nav > div ul li {
+  width: auto;
+  list-style-type: none;
+  padding: 0.9rem 1rem;
+  text-transform: uppercase;
+}
+nav > div > ul li a {
+  text-decoration: none;
+  color: #5a5a5a;
+  padding: 0.4rem 0;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.66rem;
+  line-height: 0.66rem;
+  letter-spacing: 0.02em;
+}
+.active {
+  color: #ffffff;
+  border-bottom: 1.5px solid #ffffff;
+}
+
+.topbar-wrapper {
+  height: 100%;
+  position: relative;
+}
+.topbar {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-flow: row;
+  padding: 1rem 2.5% 0.5rem;
+  position: sticky;
+  z-index: 9998;
+  top: 0;
+  background-color: #121212;
+}
+.topbar .logo {
+  display: flex;
+  flex-flow: column;
+  height: fit-content;
+}
+.topbar .logo span {
+  display: inline-block;
+  width: 24px;
+  height: 0;
+  border: 1.75px solid #5a5a5a;
+}
+.topbar .logo a {
+  text-decoration: none;
+  color: #ffffff;
+  padding-top: 0.4rem;
+  width: 91px;
+  text-transform: uppercase;
+  font-family: Coco Gothic;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.35rem;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+.topbar a.resume {
+  font-family: Coco Gothic;
+  width: 5vw;
+  min-height: 2vh;
+  padding: 0.2rem 0.6rem;
+  color: #ffffff;
+  background-color: #363636;
+  border-radius: 0.6rem;
+  text-decoration: none;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.social-list {
+  width: auto;
+  position: fixed;
+  width: auto;
+  height: auto;
+  right: 4.5vw;
+  bottom: 1.5vh;
+  z-index: 9999;
+}
+.social-list ul {
+  padding: 0;
+}
+li.social-list-item {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0.6rem;
+}
+li.social-list-item a svg {
+  color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.disc {
+  /* display:n */
+ }
+ .disc img {
+  width:100%;
+  animation: rotating 25s linear infinite;
+ }
+ .disc img path {
+  opacity: .4;
+ }
+ .disc img circle {
+  pointer-events:all;
+ }
+ .disc .disc__circle {
+  cursor: pointer;
+ }
+ .home__disc {
+  position:fixed;
+  left:50%;
+  top:50%;
+  width:140vw;
+  -webkit-transform:translate3d(calc(-50% + 28.3vw),calc(-50% + 32vh),0);
+  transform:translate3d(calc(-50% + 28.3vw),calc(-50% + 32vh),0);
+  pointer-events:none;
+  z-index: 1
+ }
+ 
+
+.home, .About, .Projects, .Contact, .Misc {
+  position: relative;
+  top: 12.5%;
+  z-index: 10;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home {
   display: flex;
-  flex-direction: column;
+  /* position: relative; */
+  justify-content: center;
+  align-items: center;
+  /* min-height: 100vh; */
+
+}
+.home-image {
+  transform: scale(0.6);
+  animation: hover 5s ease-in-out infinite alternate;
+}
+.home .home-label {
+  font-family: Open Sans;
+  font-size: 5rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 5.25rem;
+  letter-spacing: 0.04em;
+  text-align: left;
+  position: absolute;
+  width: auto;
+  height: auto;
+  left: 50px;
+  bottom: 2%;
+  letter-spacing: 0.02em;
+  color: #363636;
+}
+.home .home-label span {
+  width: auto;
+  display: block;
+  padding: 0.1rem;
+}
+.home .home-label span:hover {
+  animation: enlarge 1s ease-out forwards;
+}
+
+.About .intro {
+  width: 737px;
+  height: auto;
+  margin-bottom: 3rem;
+  margin-left: 12.45%;
+}
+.About .intro > div {
+  margin-bottom: 3.5rem;
+}
+.About .intro p {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.12rem;
+  color: #FFFFFF;
+  margin: 0.25rem 0 0;
+}
+.About .intro p:hover {
+  animation: glitch 1.5s linear infinite, glitchTop 1.5s linear infinite, glitchBottom 1.5s linear infinite;
+}
+.About .skill {
+  margin-left: 12.45%;
+  width: fit-content;
+}
+.About .skill h6, .About .intro h6 {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 11px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  margin: 0 0 0.66rem;
+  color: #363636;
+  text-transform: uppercase;
+}
+.About .skill > div {
+  display: flex;
+  flex-flow: row;
+  width: fit-content;
+}
+.About .skill > div div {
+  width: 300px;
+  margin-right: 51px;
+}
+.About .skill > div:last-child {
+  margin-right: 0;
+}
+.About .skill > div div h2 {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 36px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin: 0 0 1rem;
+}
+.About .skill > div div h2 span {
+  color: #363636;
+}
+.About .skill > div div p {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #484848;
+}
+.About .skill > div div p:last-child {
+  font-family: Open Sans;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #363636;
+  text-transform: uppercase;
+}
+
+.tab-list {
+  border-bottom: 1px solid #5a5a5a;
+  padding-left: 0;
+  width: 75%;
+  margin-left: 12.5%;
+}
+
+.tab-list-item {
+  display: inline-block;
+  list-style: none;
+  margin-bottom: -1px;
+  padding: 0.75rem 2rem;
+  cursor: pointer;
+  color: #ffffff;
+}
+
+.tab-list-active {
+  background-color: #5a5a5a;
+}
+
+.Contact {
+  display: flex;
+  flex-flow: row;
+}
+.Contact > div:last-child {
+  padding: 2rem;
+  width: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.Contact > div:last-child form label {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 0.75rem;
+  line-height: 21px;
+  letter-spacing: 0.02em;
+  color: #5a5a5a;
+}
+.Contact > div:last-child form input, .Contact > div:last-child form select, .Contact > div:last-child form textarea {
+  width: 20rem;
+  height: auto;
+  padding: 0.6rem;
+  background-color: #363636;
+  color: #ffffff;
+  border: none;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.05rem;
+  display: block;
+  margin-bottom: 1.25rem;
+}
+.Contact > div:last-child form button {
+  width: auto;
+  height: auto;
+  padding: 0.8rem 1.6rem;
+  background-color: #ffffff;
+  color: #363636;
+  border: none;
+  font-family: Coco Gothic;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 0.75rem;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
+  text-align: center;
+}
+.Contact > div:first-child {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Contact > div:first-child div {
+  width: fit-content;
+}
+.Contact > div:first-child p {
+  color: #5a5a5a;
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+  letter-spacing: 0.02rem;
+  font-family: Open Sans;
+  font-weight: normal;
+  padding: 0.2rem;
+  width: 80%;
+}
+.Contact .social-icon {
+  font-size: 1.5rem;
+  color: #565656;
+}
+.Contact .social-icon:hover {
+  color: #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
+.Misc > div:first-child {
+  padding: 1rem;
+  margin: 2rem 0;
+  margin-left: 12.5%;
+  width: auto;
+}
+.Misc > div:first-child > span {
+  color: #ffffff;
+  display: block;
+  font-size: 1.5rem;
+  line-height: 2.25rem
+}
+.Misc > div:last-child {
+  width: 84%;
+  margin-left: 12.5%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.Misc > div:last-child > div {
+  background-color: #5a5a5a;
+  margin-right: 20%;
+  margin-bottom: 10%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  font-family: Open sans;
+}
+.Misc > div:last-child > div a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 2rem 1rem;
+  position: relative;
+  top: 0;
+  left: 0;
+  background-image: none;
+  transition: background-image 1.5s;
+  text-decoration: none;
+}
+.Misc > div:last-child > div a:hover  {
+  background-image: linear-gradient(to bottom, #f523a7 0%, #ff9408 100%);
+}
+.Misc > div:last-child > div > a h3 {
+  margin-top: 0;
+  color: #ffffff;
+}
+.Misc > div:last-child > div > a p {
+  color: #9a9a9a;
+  font-size: 0.8rem;
+  line-height: 1.2rem;
 }
 
-@keyframes App-logo-spin {
+.Playlist .misc-header {
+  height: 60vh;
+  background-image: url("images/img-14.jpg");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.Playlist .misc-header h1 {
+  margin: 0;
+  color: #ffffff;
+  font-family: Coco Gothic;
+}
+.Playlist .misc-header a {
+  display: inline-block;
+  background-color: #121212;
+  padding: 0.5rem 1.6rem;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+}
+.Playlist > div {
+  padding: 3rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.Playlist > div h3 {
+  font-family: Open Sans;
+  font-weight: normal;
+  font-style: normal;
+  color: #5a5a5a;
+}
+.Playlist > div div.item {
+  background-color: #242424;
+  padding: 0.75rem 2rem;
+  margin: 0 5% 1rem 0;
+  border-radius: 2px;
+  display: flex;
+  flex-flow: row nowrap;
+}
+.Playlist > div div.item > div:first-child {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 33%;
+}
+.Playlist > div div.item > div:first-child span:first-child {
+  color: #ffffff;
+  font-size: 0.9rem;
+  font-family: Open Sans;
+  font-weight: normal;
+  font-style: normal;
+  padding: 0.25rem;
+}
+.Playlist > div div.item > div:first-child span:last-child {
+  font-weight: bold !important;
+}
+.Playlist > div div.item > div:first-child span:last-child,
+.Playlist > div div.item > div:last-child span:first-child,
+.Playlist > div div.item > div:last-child span:nth-child(2),
+.Playlist > div div.item > div:last-child span:last-child {
+  color: #5a5a5a;
+  font-size: 0.75rem;
+  font-family: Open Sans;
+  font-weight: normal;
+  font-style: normal;
+  padding: 0.25rem;
+  height: fit-content;
+}
+.Playlist > div div.item > div:last-child {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 67%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.Error div {
+  text-align: center;
+}
+.Error img {
+  width: 350px;
+  height: 350px;
+}
+.Error h1 {
+  font-size: 3.5rem;
+  color: #ffffff;
+  font-family: Open Sans;
+  margin: 0.5rem 0 0;
+}
+.Error h3 {
+  font-size: 1rem;
+  color: #5a5a5a;
+  font-family: Open Sans;
+  font-weight: normal;
+  margin: 0;
+}
+.Error p {
+  width: fit-content;
+  color: #ffffff;
+  line-height: 2rem;
+  margin: auto;
+}
+
+@keyframes brighten {
   from {
-    transform: rotate(0deg);
+    filter: drop-shadow(0px 4px 20px rgba(255, 255, 255, 0.26));
   }
   to {
+    filter: drop-shadow(0px 22px 123px rgba(255, 255, 255, 0.26),
+    0px 10.1713px 56.8666px rgba(255, 255, 255, 0.192836),
+    0px 5.81977px 32.5378px rgba(255, 255, 255, 0.162963),
+    0px 3.53256px 19.7502px rgba(255, 255, 255, 0.140387),
+    0px 2.12852px 11.9004px rgba(255, 255, 255, 0.119613),
+    0px 1.1853px 6.62689px rgba(255, 255, 255, 0.097037),
+    0px 0.509789px 2.85018px rgba(255, 255, 255, 0.0671644));
+  }
+}
+@keyframes hover {
+  from {
+    transform: translateY(16px) scale(0.7);
+  }
+  to {
+    transform: translateY(0px)scale(0.7);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate3d(0,1,0,0deg);
+  }
+  to {
+    transform: rotate3d(0,1,0,360deg);
+  }
+}
+@keyframes enlarge {
+  from {
+    transform: translateY(0px);
+    font-size: 5rem;
+    color: #363636;
+  }
+  to {
+    transform: translateY(5px);
+    font-size: 5.25rem;
+    color: #5a5a5a;
+  }
+}
+
+@keyframes glitch{
+  2%,64%{
+    transform: translate(2px,0) skew(0deg);
+  }
+  4%,60%{
+    transform: translate(-2px,0) skew(0deg);
+  }
+  62%{
+    transform: translate(0,0) skew(5deg); 
+  }
+}
+
+.About .intro p:before:hover,
+.About .intro p:after:hover{
+  content: attr(title);
+  position: absolute;
+  left: 0;
+}
+
+.About .intro p:before:hover{
+  animation: glitchTop 1.5s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop{
+  2%,64%{
+    transform: translate(2px,-2px);
+  }
+  4%,60%{
+    transform: translate(-2px,2px);
+  }
+  62%{
+    transform: translate(13px,-1px) skew(-13deg); 
+  }
+}
+
+.About .intro p:after:hover{
+  animation: glitchBottom 1.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBottom{
+  2%,64%{
+    transform: translate(-2px,0);
+  }
+  4%,60%{
+    transform: translate(-2px,0);
+  }
+  62%{
+    transform: translate(-22px,5px) skew(21deg); 
+  }
+}
+
+@keyframes rotating {
+  from{
+    transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+  }
+  to{
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
