--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,26 @@
+:root{
+  /* --vh: 6.4px; */
+}
+::-webkit-scrollbar {
+  display: none; /* chrome */
+}
+html {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 body {
   margin: 0;
+  padding: 0;
+  background-color: #1b1b1b;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
+  box-sizing: border-box;
+  background-color: #121212;
+  min-height: 100vh;
 }
 
 code {
