initial custom code commit

--- a/src/Home.css
+++ b/src/Home.css
@@ -1,29 +1,12 @@
-.container {
-    position: relative;
-    width: auto;
-    font-style: italic;
-    transform: translate(-50%, -50%);
-    top: 40%;
-    left: 50%;
-  }
-  
-  .glitch, .glow {
-    color: white;
-    position: absolute;
-    font-size: 7vw;
-    animation: glitch 5s 5s infinite;
-    width: fit-content;
-  }
-  
-  .glitch::before, .glow::before {
+  /* .glitch::before, .glow::before {
     content: attr(data-text);
     position: absolute;
     left: -2px;
-    text-shadow: -5px 0 #5a5a5a;
+    text-shadow: -5px 0 #4a4a4a;
     background: transparent;
     overflow: hidden;
     top: 0;
-    animation: noise-1 3s linear infinite alternate-reverse, glitch 5s 5.05s infinite;
+    animation: noise-1 7s linear infinite alternate-reverse, glitch 12s 12s infinite;
   }
   
   .glitch::after, .glow::after {
@@ -34,13 +17,13 @@
     background: transparent;
     overflow: hidden;
     top: 0;
-    animation: noise-2 3s linear infinite alternate-reverse, glitch 5s 5s infinite;
-  }
+    animation: noise-2 7s linear infinite alternate-reverse, glitch 2s 12s infinite;
+  } */
   
 
   @keyframes glitch {
     1% {
-      transform: rotateX(10deg) skewX(90deg);
+      transform: rotateX(10deg) skewX(30deg);
     }
     2% {
       transform: rotateX(0deg) skewX(0deg);
@@ -234,25 +217,12 @@
     }
   }
   
-  .glow {
+  /* .glow {
     text-shadow: 0 0 50px #dfbfbf;
     color: transparent;
-    position: absolute;
-    top: 0;
-  }
-  
-  .subtitle {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 100;
-    font-size: .8vw;
-    color: rgba(165, 141, 141, 0.4);
-    text-transform: uppercase;
-    letter-spacing: 1em;
-    text-align: center;
     position: relative;
-    left: 17%;
-    animation: glitch-2 5s 5.02s infinite;
-  }
+    top: 0;
+  } */
   
   @keyframes glitch-2 {
     1% {
