Changed fonts and finetuned CSS

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,22 @@
 :root{
-  /* --vh: 6.4px; */
-  /* --primary : #1d1d21; */
   --primary: #ffffff;
   --primary-dark: #0c0c1040;
-  /* --secondary: #ffffff; */
   --secondary : #1d1d21;
   --accent-a: #616164;
   --accent-b: #f64b29;
   --accent-c: #5a5a5a;
-  --accent-d: #f0f0f0;
+  --accent-d: #f2f2f2;
   --lh-a: 1.5;
-  --main-font: 'Alliance No.2';
-  --sub-font: 'Open Sans';
+  --lh-b: 1.75;
+  --lh-c: 2;
+  /* --main-font: 'Alliance No.2'; */
+  --main-font: 'Space Mono', monospace;
+  --sub-font: 'Manrope', sans-serif;
+  --fs-one: 10vw;
+  --fs-two: 6vw;
+  --fs-three: 5vw;
+  --fs-four: 4vw;
+  --fs-five: 3.25vw;
 }
 ::-webkit-scrollbar {
   display: none; /* chrome */
