changed naming convention for project, changed UI for project items

--- a/src/App.css
+++ b/src/App.css
@@ -159,7 +159,7 @@ html.has-scroll-dragging {
 }
 .Home [data-scroll]:not(.is-inview),
 .About [data-scroll]:not(.is-inview),
-.Projects [data-scroll]:not(.is-inview),
+/* .Work [data-scroll]:not(.is-inview), */
 .Contact [data-scroll]:not(.is-inview),
 .Shop [data-scroll]:not(.is-inview),
 .Space [data-scroll]:not(.is-inview),
@@ -268,9 +268,7 @@ html.has-scroll-dragging {
   }
   .topbar nav.mobile-nav button {
     z-index: 9999;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 50%;
-    backdrop-filter: blur(5px);
+    background-color: transparent;
     margin: auto;
     border: none;
     width: inherit;
@@ -279,6 +277,7 @@ html.has-scroll-dragging {
   }
   .topbar nav.mobile-nav button svg.menu-icon {
     color: var(--secondary);
+    fill: var(--secondary);
     font-size: var(--fs-two);
   }
   .topbar nav.mobile-nav button svg.menu-icon:hover {
@@ -334,14 +333,16 @@ html.has-scroll-dragging {
     display: none;
   }
 
-  .in-page-nav {
-    display: block;
+  a.tertiary.in-page-nav {
     margin-top: 10vh;
+    font-size: var(--fs-four);
+    margin-left: auto;
   }
+
 
   .Footer {
     border-top: 1px solid var(--accent-d);
-    padding: 0 6vw 9vh;
+    padding: 0 6vw 14vh;
   }
   .Footer > div.contact-email {
     padding: 13vw 0 6vw;
@@ -382,7 +383,7 @@ html.has-scroll-dragging {
   }
   .Footer > div.attribution {
     text-align: center;
-    padding: 10vw 0 0;
+    padding: 16vw 0 0;
   }
   .Footer > div.attribution span {
     display: inline-block;
@@ -390,7 +391,6 @@ html.has-scroll-dragging {
     font-size: var(--fs-four);
     color: var(--accent-c);
     padding: 1vw 0;
-    /* font-variant: small-caps; */
     font-family: var(--sub-font);
   }
   
@@ -398,7 +398,7 @@ html.has-scroll-dragging {
 
   .Home,
   .About,
-  .Projects,
+  .Work,
   .Contact,
   .Shop,
   .Space,
@@ -433,7 +433,6 @@ html.has-scroll-dragging {
     font-style: normal;
     font-weight: normal;
     line-height: var(--lh-a);
-    /* letter-spacing: 0.5vw; */
   }
   .lineParent {
     overflow: hidden;
@@ -478,6 +477,7 @@ html.has-scroll-dragging {
   }
   .Home > div.name-and-title > div.dictionary > div > p {
     line-height: var(--lh-a);
+    color: var(--accent-a);
     margin-left: 10vw;
     font-size: var(--fs-five);
   }
@@ -519,8 +519,8 @@ html.has-scroll-dragging {
   div.image-container
   .image-wrapper
   > img.home-profile-image {
-    clip-path: inset(100% 0% 0% 0%);
-    transition: clip-path 2s cubic-bezier(0.77, 0, 0.175, 1);
+    clip-path: inset(0% 100% 0% 0%);
+    transition: clip-path 1.5s cubic-bezier(0.77, 0, 0.175, 1);
   }
   .Home
   > div.home-about
@@ -567,7 +567,6 @@ html.has-scroll-dragging {
     font-style: normal;
     font-weight: normal;
     line-height: var(--lh-c);
-    /* letter-spacing: 0.25vw; */
   }
   /* .Home div.skillset {
       margin: 6vw 0 10vw;
@@ -594,7 +593,7 @@ html.has-scroll-dragging {
     content: "";
     height: 0.2rem;
     width: 0;
-    background-color: #000;
+    background-color: var(--secondary);
     transform-origin: right;
     -webkit-transition: -webkit-transform 1.2s cubic-bezier(0.77, 0, 0.18, 1) 0.3s;
     transition: -webkit-transform 1.2s cubic-bezier(0.77, 0, 0.18, 1) 0.3s;
@@ -603,19 +602,22 @@ html.has-scroll-dragging {
   }
   .Home div.skillset ul li {
     list-style-type: none;
-    padding-bottom: 4vw;
+    margin: 0 0 16vw;
     text-align: right;
+    display: flex;
+    justify-content: right;
+    position: relative;
   }
   .Home div.skillset ul li span.label-no {
     display: inline-block;
-    color: var(--accent-c);
+    color: var(--accent-d);
     font-family: var(--main-font);
-    font-size: var(--fs-five);
+    font-size: 22vw;
     font-style: normal;
-    font-weight: normal;
-    line-height: var(--lh-a);
+    font-weight: bold;
+    line-height: 22vw;
     letter-spacing: 0.25vw;
-    margin-right: 4vw;
+    z-index: -1;
   }
   .Home div.skillset ul li span.label {
     display: inline-block;
@@ -626,67 +628,26 @@ html.has-scroll-dragging {
     font-weight: normal;
     line-height: var(--lh-a);
     letter-spacing: 0.25vw;
+    height: fit-content;
+    margin-right: 14vw;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding-bottom: 3vw;
   }
   .Home div.home-nav {
     margin-bottom: 0;
   }
-  .bright {
-    color: var(--secondary);
-  }
+ 
 
-  /* .About div.photo-wrapper {
-      position: relative;
-      height: 65vh;
-      margin-bottom: 8vh;
-      overflow-x: clip;
-    }
-    .About div.photo-wrapper div.photo-container {
-      max-width: 45.2rem;
-      position: relative;
-      height: 100%;
-    }
-    .About div.photo-wrapper div.photo-container div.photo-box {
-      width: 100%;
-      position: relative;
-      height: 100%;
-    }
-    .About div.photo-wrapper div.photo-container div.photo-box figure {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-    .About div.photo-wrapper div.photo-container div.photo-box figure img.profile-image {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      margin-left: 15vw;
-      vertical-align: middle;
-    }
-    .About p.paragraph {
-      color: var(--accent-a);
-      font-family: var(--main-font);
-      font-size: 9vw;
-      font-style: normal;
-      font-weight: normal;
-      line-height: var(--lh-a);
-      letter-spacing: 0.04em;
-      padding-bottom: 7.5vh;
-    }
-    .About p:nth-of-type(2n).paragraph  {
-      padding: 0 0 7.5vh;
-      text-align: right;
-    } */
-
-  .Projects .tab-list {
+  .Work .tab-list {
     padding-left: 0;
     width: 100%;
-    margin: 2vw 0 20vw;
+    margin: 0 0 15vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
-  .Projects .tab-list-item {
+  .Work .tab-list-item {
     display: inline-block;
     list-style: none;
     margin-bottom: -1px;
@@ -694,32 +655,33 @@ html.has-scroll-dragging {
     cursor: pointer;
     color: var(--accent-a);
     font-size: var(--fs-five);
+    text-align: center;
   }
-  .Projects .tab-list-active {
+  .Work .tab-list-active {
     background-color: var(--secondary);
     color: var(--primary);
     border-radius: 1vw;
   }
-  /* .Projects ul.project-item {
-      padding: 5vh 2vw;
-    } */
-  .Projects > div .tabs .tab-content li.project-list-item {
-    list-style: none;
-    padding-bottom: 12vw;
-    text-align: left;
+  .Work > div .tabs .tab-content li.work-list-item {
+    list-style-type: none;
+    margin: 0 0 16vw;
+    text-align: right;
+    display: flex;
+    justify-content: right;
+    position: relative;
   }
-  .Projects > div .tabs .tab-content li.project-list-item span.label-no {
+  .Work > div .tabs .tab-content li.work-list-item span.label-no {
     display: inline-block;
-    color: var(--accent-c);
+    color: var(--accent-d);
     font-family: var(--main-font);
-    font-size: var(--fs-five);
+    font-size: 22vw;
     font-style: normal;
-    font-weight: normal;
-    line-height: var(--lh-a);
+    font-weight: bold;
+    line-height: 22vw;
     letter-spacing: 0.25vw;
-    margin-right: 4vw;
+    z-index: -1;
   }
-  .Projects > div .tabs .tab-content li.project-list-item a.label {
+  .Work > div .tabs .tab-content li.work-list-item a.label {
     display: inline-block;
     color: var(--secondary);
     font-family: var(--main-font);
@@ -728,14 +690,20 @@ html.has-scroll-dragging {
     font-weight: normal;
     line-height: var(--lh-a);
     letter-spacing: 0.25vw;
+    height: fit-content;
+    margin-right: 14vw;
     text-decoration: none;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding-bottom: 3vw;
   }
   
 
   .Case-study .header {
-    margin: 2vh 0 6vh;
+    margin: 2vh 0 10vh;
     padding-left: 4vw;
-    border-left: 1.5vw solid var(--secondary);
+    border-left: 1vw solid var(--accent-c);
   }
   .Case-study .header > div:nth-child(2),
   .Case-study .header > div:nth-child(3) {
@@ -776,14 +744,17 @@ html.has-scroll-dragging {
   .Case-study .body > div.case-study-section:last-of-type {
     margin-bottom: 1vh;
   }
-  .Case-study .body > div.case-study-section h3 {
+  .Case-study .body > div.case-study-section h2 {
     color: var(--secondary);
     font-family: var(--main-font);
     font-size: var(--fs-two);
-    line-height: var(--lh-a);
-    font-weight: bold;
+    line-height: var(--lh-b);
+    font-weight: 600;
     font-style: normal;
-    padding: 0 0 3.5vh;
+    padding: 0 0 4vh;
+  }
+  .Case-study .body > div.case-study-section img {
+    margin: 4vh 0 6vh;
   }
   .Case-study .body > div.case-study-section p {
     color: var(--secondary);
@@ -792,7 +763,17 @@ html.has-scroll-dragging {
     line-height: var(--lh-c);
     font-weight: normal;
     font-style: normal;
-    padding: 5vh 0 0;
+    padding: 0 0 3.5vh;
+    text-indent: 12%;
+  }
+  .Case-study div.in-page-nav-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 10vh;
+  }
+  .Case-study div.in-page-nav-section a.tertiary.in-page-nav {
+    margin-top: 0;
+    text-align: center;
   }
 
   .Contact {
@@ -1244,7 +1225,7 @@ html.has-scroll-dragging {
 
   .home,
   .About,
-  .Projects,
+  .Work,
   .Contact,
   .Space {
     position: relative;
@@ -1400,13 +1381,13 @@ html.has-scroll-dragging {
     text-transform: uppercase;
   }
 
-  .Projects .tab-list {
+  .Work .tab-list {
     border-bottom: 1px solid #5a5a5a;
     padding-left: 0;
     width: 50%;
     margin: 1.5% 0 3% 12.5%;
   }
-  .Projects .tab-list-item {
+  .Work .tab-list-item {
     display: inline-block;
     list-style: none;
     margin-bottom: -1px;
@@ -1414,10 +1395,10 @@ html.has-scroll-dragging {
     cursor: pointer;
     color: var(--secondary);
   }
-  .Projects .tab-list-active {
+  .Work .tab-list-active {
     background-color: var(--primary);
   }
-  .Projects .dev-card {
+  .Work .dev-card {
     background-image: linear-gradient(
       to bottom,
       var(--primary) 0%,
@@ -1430,20 +1411,20 @@ html.has-scroll-dragging {
     transition: all 0.4s ease-in-out;
     width: 50%;
   }
-  .Projects .dev-card:hover {
+  .Work .dev-card:hover {
     transform: scale(1.1);
     background-image: linear-gradient(to bottom, #404044 0%, #303033 100%);
   }
-  .Projects .dev-card > div:first-child {
+  .Work .dev-card > div:first-child {
     display: flex;
     flex-flow: row nowrap;
     margin: 0 0 0.5rem;
   }
-  .Projects .dev-card > div:first-child div:first-child,
-  .Projects .dev-card > div:first-child div:last-child {
+  .Work .dev-card > div:first-child div:first-child,
+  .Work .dev-card > div:first-child div:last-child {
     width: 50%;
   }
-  .Projects .dev-card > div:first-child div:first-child h4 {
+  .Work .dev-card > div:first-child div:first-child h4 {
     color: var(--secondary);
     font-size: 0.9rem;
     font-family: var(--sub-font);
@@ -1453,7 +1434,7 @@ html.has-scroll-dragging {
     width: fit-content;
     margin: 0;
   }
-  .Projects .dev-card > div:first-child div:first-child span {
+  .Work .dev-card > div:first-child div:first-child span {
     color: green;
     font-size: 0.6rem;
     font-family: var(--sub-font);
@@ -1462,7 +1443,7 @@ html.has-scroll-dragging {
     padding: 0.25rem;
     text-transform: uppercase;
   }
-  .Projects .dev-card > div:last-child p {
+  .Work .dev-card > div:last-child p {
     color: var(--secondary);
     font-size: 0.75rem;
     font-family: var(--sub-font) Light;
