--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
   --primary: #ffffff;
   --primary-dark: #0c0c1040;
-  --secondary : #0d0d0d;
+  --secondary : #0a0a0a;
   --accent-a: #2e2e2e;
   --accent-c: #787878;
   --accent-d: #f2f2f2;
@@ -28,15 +28,26 @@
   --fs-three: 5vw;
   --fs-four: 4vw;
   --fs-five: 3.25vw;
+  --fs-six: 8vw;
 }
 @media (prefers-color-scheme: dark) {
   :root{
-    --primary: #0d0d0d;
+    --primary: #0a0a0a;
     --primary-dark: #0c0c1040;
-    --secondary : #f2f2f2;
+    --secondary : #e8e8e8;
     --accent-a: #c2c2c2;
     --accent-c: #787878;
     --accent-d: #2e2e2e;
+  }
+}
+@media screen and (min-width: 1024px) {
+  :root {
+    --fs-one: 5vw;
+    --fs-two: 3vw;
+    --fs-three: 2vw;
+    --fs-four: 1.5vw;
+    --fs-five: 1vw;
+    --fs-six: 4vw;
   }
 }
 ::-webkit-scrollbar {
@@ -47,6 +58,6 @@ html {
   scrollbar-width: none;  /* Firefox */
   box-sizing: border-box;
 }
-#root {
+/* #root {
   position: relative;
-}
+} */
